--- a/src/Styles/Tabbar.css
+++ b/src/Styles/Tabbar.css
@@ -1,15 +1,15 @@
+.main_header{
+  background:#f7f7f7;
+  width:100%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)!important;
+}
 .headerrr {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: white;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 0px 30px 0px 30px;
-  height: fit-content;
-  position: fixed;
-  width:calc(100% - 40px);
-  top: 0;
-  bottom: 0;
+  max-width: 1100px;
+  margin:auto;
 }
 
 .logo {
