--- a/src/styles2.css
+++ b/src/styles2.css
@@ -207,3 +207,213 @@ header nav a{
 .signin_google_btn:hover{
     box-shadow: 0 4px 10px -2px rgba(11,48,82,.25);
 }
+
+
+/* 
+       Notes Form Page CSS 
+*/
+
+
+.Notes_form_container{
+    
+   background:#e8f2fc;
+   padding-top: 40px;
+   padding-bottom: 60px;
+}
+.Notes_Form_Main{
+    background:#e8f2fc;
+    padding-top: 35px;
+}
+
+.Notes_form_container .form_inner{
+    max-width: 740px;
+    margin:auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    background:#fff;
+    padding:40px;
+    border-radius: 16px;
+}
+
+
+
+.Notes_form_container h1{
+    font-size: 28px;
+    line-height:32px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+.Notes_form_container p{
+    text-align: center;
+    padding-left: 13%;
+    padding-right: 13%;
+    font-size: 15px;
+    line-height: 19px;
+}
+
+.notes_form .names_div{
+    display: grid;
+    grid-template-columns: 2fr 2fr 1fr;
+    grid-gap: 14px;
+    margin-bottom: 14px;
+}
+.fields_row2{
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr 2fr;
+    grid-gap: 14px;
+    margin-bottom: 4px;
+}
+.ins_container .fields_row2{
+    grid-template-columns: 2fr 2fr 2fr;
+}
+.names_div2{
+    margin-top: 14px;
+}
+.numders_div{
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr 1fr;
+    grid-gap: 14px;
+}
+.emg_fields{
+    margin-top: 30px;
+}
+.emg_fields .emg_inner{
+    padding-top: 14px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 14px;
+}
+.ins_form2 .emg_inner{
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.emg_fields h3{
+    margin-bottom: 8px;
+}
+.insform_div1{
+    margin-bottom: 14px;
+}
+
+.ins_main_fields{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap:14px;
+    margin-top: 14px;
+}
+
+.ins_form1 h3{
+    margin-top: 30px;
+    margin-bottom: 19px;
+}
+
+.insurance_file{
+    display: block!important;
+   
+}
+.insform_div1 h4{
+    margin-bottom: 10px;
+}
+
+.steps_form_div{
+    margin:auto;
+    max-width: 720px;
+    padding-bottom: 10px;
+    padding-top: 20px;
+}
+
+.preNextdiv{
+    /* display: none!important; */
+}
+.textareadiv{
+    width:100%;
+    display:grid;
+    grid-template-columns: 1fr;
+    margin-bottom: 15px;
+}
+.textarea_cc{
+    border:1px solid rgba(0,0,0,.27);
+    display:block;
+    padding: 16.5px 14px;
+    border-radius: 4px;
+    min-height: 80px;
+}
+.field_div{
+    margin-bottom: 15px;
+}
+.checkboxes_int{
+    width:100%;
+    display:flex!important;
+    flex-direction: row!important;
+    flex-wrap: wrap;
+}
+.checkboxes_int legend{
+    display: block;
+    width:100%!important;
+}
+.ICD_div .emg_inner{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 14px;
+}
+.ICD_div{
+    padding-top: 15px;
+}
+.ICD_div h3{
+    margin-bottom: 8px;
+    
+}
+
+.MedicalHistoryForms table input{
+    padding:5px;
+    border:0px!important;
+}
+.hidden_text_fields{
+    display: none!important;
+}
+.MedicalHistoryForms .form_inner{
+    max-width: 890px;
+}
+.steps_form_div2{
+    max-width: 900px;
+}
+.MedicalHistoryForms .tableHeads th{
+    /* font-weight: bold; */
+}
+.thMain{
+    min-width: 140px;
+}
+.thMain1{
+    min-width: 140px;
+}
+.Notes_Form_Main h3{
+    text-align: center;
+    margin-bottom: 12px;
+}
+.mainTitleForms{
+    text-align: center;
+    margin-bottom: 20px;
+}
+@media(min-width:768px){
+    .Notes_form_container .notes_form{
+        padding-top: 40px;
+    }
+}
+
+.popup_alert p{
+    margin-top: 3px;
+}
+.popup_alert button{
+    background:none;
+    border:none;
+    margin-top: 15px;
+    text-decoration: underline;
+    cursor: pointer;
+}
+.popup_alert div{
+    padding:25px;
+    max-width: 350px!important;
+    min-height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
